<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.me.MeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Loading Sign -->
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/profileLayout"
                    tools:visibility="visible"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/appCompatTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/spacing_16"
                        android:text="@string/me"
                        android:textSize="@dimen/text_xlarge"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profileImage"
                        android:layout_width="@dimen/icon_size_200dp"
                        android:layout_height="@dimen/icon_size_200dp"
                        android:layout_marginHorizontal="@dimen/icon_size_large"
                        android:layout_marginTop="@dimen/spacing_16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                        android:src="@drawable/image_placeholder" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:layout_marginTop="@dimen/spacing_32"
                        android:text="@string/label_title"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvValueTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8"
                        android:layout_marginEnd="@dimen/spacing_16"
                        android:textSize="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelTitle"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelTitle"
                        tools:text="xxxxxx" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelFirsName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:text="@string/label_first_name"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelTitle" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvValueFirstName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8"
                        android:layout_marginEnd="@dimen/spacing_16"
                        android:textSize="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelFirsName"
                        app:layout_constraintTop_toTopOf="@+id/tvLabelFirsName"
                        tools:text="xxxxxx" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:text="@string/label_last_name"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelFirsName" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvValueLastName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8"
                        android:layout_marginEnd="@dimen/spacing_16"
                        android:textSize="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelLastName"
                        app:layout_constraintTop_toTopOf="@id/tvLabelLastName"
                        tools:layout_editor_absoluteY="324dp"
                        tools:text="xxxxxx" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelDateOfBirth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:text="@string/label_date_of_birth"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelLastName" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvValueDateOfBirth"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8"
                        android:layout_marginEnd="@dimen/spacing_16"
                        android:textSize="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelDateOfBirth"
                        app:layout_constraintTop_toTopOf="@id/tvLabelDateOfBirth"
                        tools:layout_editor_absoluteY="324dp"
                        tools:text="xxxxxx" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:text="@string/label_age"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelDateOfBirth" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvValueAge"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8"
                        android:layout_marginEnd="@dimen/spacing_16"
                        android:textSize="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelAge"
                        app:layout_constraintTop_toTopOf="@id/tvLabelAge"
                        tools:layout_editor_absoluteY="324dp"
                        tools:text="xxxxxx" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:text="@string/label_gender"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelAge" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgGender"
                        android:layout_width="@dimen/icon_size_small"
                        android:layout_height="@dimen/icon_size_small"
                        android:padding="@dimen/spacing_4"
                        android:layout_marginStart="@dimen/spacing_8"
                        app:layout_constraintBottom_toBottomOf="@+id/tvLabelGender"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelGender"
                        app:layout_constraintTop_toTopOf="@id/tvLabelGender"
                        tools:src="@drawable/ic_male" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelNationality"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:text="@string/label_nationality"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelGender" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvValueNationality"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8"
                        android:layout_marginEnd="@dimen/spacing_16"
                        android:textSize="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelNationality"
                        app:layout_constraintTop_toTopOf="@id/tvLabelNationality"
                        tools:layout_editor_absoluteY="324dp"
                        tools:text="xxxxxx" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:text="@string/label_mobile"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelNationality" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvValueMobile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8"
                        android:layout_marginEnd="@dimen/spacing_16"
                        android:textSize="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelMobile"
                        app:layout_constraintTop_toTopOf="@id/tvLabelMobile"
                        tools:layout_editor_absoluteY="324dp"
                        tools:text="xxxxxx" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLabelAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_16"
                        android:text="@string/label_address"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvLabelMobile" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvValueAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_8"
                        android:layout_marginEnd="@dimen/spacing_16"
                        android:textSize="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvLabelAddress"
                        app:layout_constraintTop_toTopOf="@id/tvLabelAddress"
                        tools:layout_editor_absoluteY="324dp"
                        tools:text="xxxxxx" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btnReload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_16"
                    android:text="@string/label_reload_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginVertical="@dimen/spacing_32"
                    app:layout_constraintTop_toBottomOf="@+id/profileLayout"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>